Fix MissionSummaryTable alignment and spacing issues.

--- a/client/src/components/MissionSummaryTable.module.css
+++ b/client/src/components/MissionSummaryTable.module.css
@@ -4,15 +4,16 @@
 
 .evenRow {
   background-color: gainsboro;
+  height: 2.3em;
 }
 
 .oddRow {
   background-color: bisque;
+  height: 2.3em;
 }
 
 .evenRow td,
 .oddRow td {
-  height: 2.3em;
   width: 1.7em;
   padding-left: 6px;
   padding-right: 4px;
@@ -33,7 +34,7 @@
 
 .proposalCell {
   text-align: center;
-  position: relative;
+  vertical-align: middle;
 }
 
 .iconStack {
@@ -45,51 +46,43 @@
 
 .proposerIcon {
   position: absolute;
-  top: 0;
-  left: 0;
-  color: #ffd700;
-  font-size: 20px;
-  transform: scale(1.3);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1.3);
+  color: yellow;
+  z-index: 1;
 }
 
 .teamIcon {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1.3);
   color: #629ec1;
-  font-size: 20px;
-  transform: scale(1.3);
+  z-index: 1;
 }
 
 .voteYes {
   position: absolute;
-  top: 0;
-  left: 2px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-40%, -50%);
   color: green;
-  font-size: 16px;
+  z-index: 2;
 }
 
 .voteNo {
   position: absolute;
-  top: 0;
-  left: 2px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-40%, -50%);
   color: #ed1515;
-  font-size: 16px;
+  z-index: 2;
 }
 
 .missionResult {
   border-right: 2px solid;
   text-align: center;
-}
-
-.missionSuccess {
-  color: green;
-  font-size: 16px;
-}
-
-.missionFail {
-  color: red;
-  font-size: 16px;
 }
 
 .endGameTitle {
